# Merism

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  celerybeat-schedule.db  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.antigravitycli/: e3539233-0f3f-4efa-b24c-3d9e3fe3827c.json
.github/: CODEOWNERS  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: MIGRATION.md  PRODUCT.md  ROADMAP.md
docs/.archive_2026-05-20/: MIGRATION.md  ROADMAP.md  RUNTIME.md
docs/adr/: 0001-stay-django-reject-supabase.md  0002-voice-barge-in-default-off.md  0003-vad-silero-audio-pipeline.md  0004-dashscope-realtime-model-names.md  0005-voice-pipeline-frame-architecture.md  0006-runtime-harness.md  0007-conductor-v2-typebot-engine.md  0008-bubble-segments-and-inline-actions.md  0009-list-interpreter-superseding-dag.md  0011-conductor-v2-framework-evaluation.md  0012-conductor-v3-langgraph.md  0013-conductor-v1-retirement.md  0014-genai-processors-evaluation.md
docs/research/: execution-engine-research.md
frontend/: .oxlintrc.json  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/e2e/: comprehensive.spec.ts  smoke.spec.ts
frontend/public/: .gitkeep  pcm-capture.worklet.js
frontend/scripts/: check-openapi-types.mjs  e2e-server.mjs
frontend/src/: assets.d.ts  globals.css  index.tsx  initKea.ts  jsx.d.ts  types.ts
merism/: __init__.py  admin.py  admin_service_settings.py  apps.py  asgi.py  celery.py  health.py  middleware.py  observability.py  sentry.py  storage.py  stt.py  tts.py  urls.py  verbose_names.py  vision.py  wsgi.py
merism/analysis/: __init__.py  pipeline.py
merism/api/: __init__.py  analysis_views.py  ask_views.py  base.py  cleaning_views.py  conversation_views.py  home.py  insights_tasks.py  insights_views.py  interview_message_view.py  link_tracking_views.py  llm_gateway_views.py  serializers.py  test_insights_views.py  test_recruitment_views.py  urls.py  users.py  views.py
merism/cleaning/: __init__.py  pipeline.py
merism/codebook/: models.py  pipeline.py  retagging.py  saturation.py  tasks.py  version_manager.py
merism/concept/: __init__.py  dimensions.py
merism/conductor/: README.md  __init__.py  adaptive_probing.py  closure.py  concept_plan.py  configuration.py  decision_prompt.py  decision_validator.py  event_log.py  factory.py  generation_prompt.py  graph.py  guide_cursor.py  inbox_signals.py  llm.py  llm_polish.py  moderator.py  moderator_eval.py  nodes.py  persistence.py  post_session.py  probe_blocks.py  prompts.py  rule_clean.py  runner.py  schema.py  session_outline.py  signals.py  state.py  study_closure_signal.py  tasks.py  text_adapter.py  text_chunker.py  tools_and_schemas.py  transcript_helpers.py
merism/interview_guide/: __init__.py  test_validation.py
merism/knowledge/: README.md  __init__.py  citations.py  embeddings.py  indexer.py  search.py  tasks.py  transcript_indexer.py
merism/llm_gateway/: __init__.py  client.py  exceptions.py  litellm_client.py  presets.py  presets.yaml  tasks.py
merism/memai/: README.md  __init__.py  llm.py  title_generator.py  tool.py
merism/migrations/: 0001_initial.py  __init__.py
merism/models/: __init__.py  analysis.py  concept.py  custom_report.py  glossary.py  inbox.py  insights.py  interview.py  invitation.py  knowledge.py  link_tracking.py  llm_gateway.py  memory.py  recruitment.py  report.py  service_settings.py  session_event.py  session_quote.py  stimulus.py  study.py  team.py
merism/participant/: design.md  funnel.py  link_tracking.py  test_invitation_flow.py  test_link_tracking.py  test_views.py  urls.py  views.py
merism/realtime/: README.md  __init__.py  (+7 more)
spike/: spike_deepseek_structured.py  stress_test.py  test_post_session_compat.py  test_voice_real_e2e.py
(+432 files in other folders)
