[project]
name = "merism-app"
version = "0.1.0"
description = "Merism — AI-moderated qualitative research platform. Built fresh, zero PostHog lineage."
requires-python = "==3.12.12"
readme = "README.md"

# Pinned for reproducibility. Match the old repo's versions where we ported code
# unchanged (Django 5.2, DRF, langchain-core, pydantic v2). Bump deliberately.
dependencies = [
    # ── web framework ──
    "Django==5.2.13",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.29.0",
    # ── auth (per ADR 0001 — django-allauth replaces Supabase Auth) ──
    "django-allauth[socialaccount]==65.16.1",
    # ── admin skin (per ADR 0001 — django-unfold replaces Supabase Dashboard) ──
    "django-unfold>=0.90",
    # ── email provider abstraction (per ADR 0001 — swap via env var) ──
    "django-anymail[amazon-ses,resend,mailgun,postmark]>=12.0",
    # ── CORS (dev only: Vite on :5173 → Django on :8000) ──
    "django-cors-headers>=4.5",
    # ── persistence ──
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "django-redis>=5.4",
    # ── async / task queue ──
    "celery==5.6.3",
    "celery-redbeat==2.3.3",
    "redis>=5.0",
    # ── WebSocket (voice protocol; Channels + daphne + Redis layer) ──
    "channels>=4.2",
    "channels-redis>=4.2",
    "daphne>=4.1",
    # Client-side WS for outbound DashScope STT/TTS streams.
    "websockets>=14.0",
    # ── AI / LLM stack (DeepSeek via OpenAI-compatible client) ──
    "openai>=2.0",
    "anthropic>=0.80",
    "langchain-core>=1.0",
    "httpx>=0.27",
    # ── LLM observability (per ADR 0001) ──
    "langfuse>=3.0",
    # ── schemas / validation ──
    "pydantic>=2.10",
    "pydantic-ai>=1.0",
    # ── crypto (channel credential encryption) ──
    "cryptography>=46.0",
    # ── logging / observability ──
    "structlog>=24.0",
    "django-structlog>=8.0",
    # ── utilities ──
    "python-dotenv==1.1.1",
    # ── storage abstraction ──
    "boto3>=1.40",
    # ── parsing ──
    "beautifulsoup4==4.12.3",
    # ── templates / placeholders ──
    "Jinja2==3.1.6",
    "sentry-sdk[django]>=2.20",
    "django-prometheus>=2.3",
]

[project.optional-dependencies]
dev = [
    # test harness
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.2.0",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "pytest-mock==3.15.1",
    "hypothesis==6.151.9",
    "parameterized==0.9.0",
    "fakeredis[lua]==2.23.3",
    "freezegun==1.5.5",
    # lint / type
    "ruff==0.14.11",
    "pyright==1.1.406",
    # docs
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["merism"]

# ── ruff ──────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "migrations",
    "node_modules",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # bugbear
    "C4",    # comprehensions
    "SIM",   # simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # mutable default arg in Django views sometimes unavoidable
]

[tool.ruff.lint.isort]
known-first-party = ["merism"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"

# ── pyright ────────────────────────────────────────────────
[tool.pyright]
include = ["merism"]
exclude = [
    "**/migrations",
    "**/node_modules",
    "frontend",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
]

# ── pytest (see pytest.ini for the ini section used at runtime) ──
